tests/positive/rule4_linked_list.safe
-- Test: rule4_linked_list
-- Description: Linked list traversal with null guards.
--   Each dereference is preceded by a null check on the current node.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96a:0eaf48aa
-- Expected: ACCEPT

package Safe_Linked_List is

   type Node;
   type Node_Ptr is access Node;

   type Node is record
      Value : Integer;
      Next  : Node_Ptr;
   end record;

   --  Length: counts the number of nodes in the list.
   --  The while loop guard checks Current != null before dereference.
   function Length (Head : Node_Ptr) return Natural is
      Count   : Natural = 0;
      Current : Node_Ptr = Head;
   begin
      while Current != null loop
         --  Current is provably not null by the while guard.
         Count = Count + 1;
         Current = Current.all.Next;
      end loop;
      return Count;
   end Length;

   --  Sum: sums all values in the list.
   function Sum (Head : Node_Ptr) return Integer is
      Total   : Integer = 0;
      Current : Node_Ptr = Head;
   begin
      while Current != null loop
         --  Current is provably not null by the while guard.
         Total = Total + Current.all.Value;
         Current = Current.all.Next;
      end loop;
      return Total;
   end Sum;

end Safe_Linked_List;
